--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -453,7 +453,7 @@ a.article, a.article:hover {
 ----------------------------------------------------- */
 #content {
 	width: calc(100% - 250px);
-	padding: 40px;
+	padding-top: 100px;
 	min-height: 100vh;
 	transition: all 0.3s;
 	position: absolute;
