--- a/src/main/resources/templates/prestador/admServicios.html
+++ b/src/main/resources/templates/prestador/admServicios.html
@@ -276,6 +276,7 @@
                 document.getElementById("descripcion").value = "";
                 document.getElementById("vigencia").value = "";
                 document.getElementById("urlPago").value = "";
+                cargarTablaServicio();
 
             },
             error: function(error) {
