--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
 	<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
+
 
 </head>
 
@@ -53,16 +55,8 @@
 				<div class="col-sm-5">
 					<h2 class="titulo" >Mascotas En Adopcion</h2>
 					
-					<div class="card">
-						<div class="card-body">
-							<div class="col-sm-3">
-								<img class="img_list float-left" th:src="@{/img/iconPet.png}" alt="Logo"/>
-							</div>
-							<div class="offset-sm-3 col-sm-9">
-								<h2 class="tit_item">Nombre <span class="edad">,2 anos</span></h2>
-								<p class="descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur adipisicing elit.</p>
-							</div>
-						</div>
+					<div class="card" id="mascotaDiv">
+
 					</div>
 				</div>
 				<!--FIN Lista de Mascotas por Adoptar-->
@@ -125,5 +119,44 @@
 	</div>
 </footer>
 
+<script>
+$(document).ready(function () { //Cuando la pagina termina de cargar y esta lista, llama a los que esta aca dentro
+cargarMascotasEnAdopcion();
+});
+
+function cargarMascotasEnAdopcion() {
+    $.ajax({
+        type: 'GET',
+        url: '../mascotas/mascotasEnAdopcion',
+        contentType: 'application/json; charset=utf-8',
+
+        success: function(mascotas) {
+            console.log(mascotas);
+
+            var mascotaDiv=  $('#mascotaDiv');//Div que contiene el listado de mascotas
+            $.each( mascotas, function( index, mascota ) {
+
+               //creo un elemento mascota
+
+
+                var mascotaElem= $('<div class="card-body"> <div class="col-sm-3"> <img src="'+mascota.foto_url+'" class=" rounded-circle img_list float-left "/>   </div>'
+                    +' <div class="offset-sm-3 col-sm-9">  <h2 class="tit_item">'+mascota.nombre+' <span class="edad"> Edad '+mascota.edad+'</span></h2>'
+                    +' <p class="descripcion"> '+mascota.descripcion+'  raza '+mascota.raza+' sexo '+mascota.sexo+' tamaño '+mascota.tamanio+'</p>\n'
+                    +' </div></div> '
+                );
+
+                mascotaDiv.append(mascotaElem);//lo agrego al div del listado de mascotas
+            });
+
+
+ },
+        error: function(error) {
+            console.log(error);
+        }
+    });
+}
+
+</script>
 </body>
 </html>
+
